karpenter/add-karpenter-nodeselector/.chainsaw-test/patch-lg-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-lg-ns
  name: pod-lg01
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: spot
  containers:
    - name: busybox
      image: busybox:1.35
