karpenter/add-karpenter-nodeselector/.chainsaw-test/patch-lg.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-lg-ns
  name: pod-lg01
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: on-demand
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-lg-ns
  name: pod-lg02
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: on-demand
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
