karpenter/add-karpenter-nodeselector/.chainsaw-test/patch-med-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-med-ns
  name: pod-md01
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: on-demand
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
