karpenter/add-karpenter-nodeselector/.chainsaw-test/patch-med.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-med-ns
  name: pod-med01
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: spot
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-med-ns
  name: pod-med02
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: spot
  containers:
    - name: busybox
      image: busybox:1.35
