karpenter/add-karpenter-nodeselector/.chainsaw-test/patch-sm-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-small-ns
  name: pod-sm01
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: spot
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-small-ns
  name: pod-sm01
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: on-demand
  containers:
    - name: busybox
      image: busybox:1.35
