karpenter/add-karpenter-nodeselector/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-karpenter-nodeselector
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-karpenter-nodeselector.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: resource.yaml
  - name: step-03
    try:
    - assert:
        file: patch-med.yaml
    - assert:
        file: patch-lg.yaml
    - error:
        file: patch-med-bad.yaml
    - error:
        file: patch-lg-bad.yaml
    - error:
        file: patch-sm-bad.yaml
